name:                   regular-extras
version:                0.1
synopsis:               Additional functions for the regular generic
                        programming library
description:

  Additional functions for the regular generic programming library.
  .
  \[1] <http://hackage.haskell.org/package/regular>

category:               Generics
copyright:              (c) 2009 Universiteit Utrecht
license:                BSD3
license-file:           LICENSE
author:                 Jose Pedro Magalhaes,
                        Sebastiaan Visser
maintainer:             generics@haskell.org
stability:              experimental
build-type:             Custom
cabal-version:          >= 1.2.1
tested-with:            GHC == 6.10.4
extra-source-files:     examples/Test.hs
                        ChangeLog


library
  hs-source-dirs:       src
  exposed-modules:      Generics.Regular.Functions.Arbitrary,
                        Generics.Regular.Functions.Binary,
                        Generics.Regular.Functions.Fixpoints,
                        Generics.Regular.Functions.Seq
                        
  build-depends:        base >= 4.0 && < 5, regular >= 0.1, 
                        QuickCheck == 1.2.0.0, binary
  ghc-options:          -Wall
